--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "test": "uvu"
+    "test": "uvu",
+    "cover": "c8 -r html -r text uvu"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -10,6 +11,7 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "c8": "^7.12.0",
     "uvu": "^0.5.6"
   }
 }
