--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: daily
   - package-ecosystem: npm
-    directory: "/js"
+    directory: "/"
     schedule:
       interval: daily
     open-pull-requests-limit: 10
