fmt package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,6 @@
   "name": "@daklang/cli",
   "version": "0.1.0",
   "description": "CLI for Dak",
-  "keywords": ["lisp", "clojure", "fennel"],
   "homepage": "https://daklang.com/",
   "license": "MIT",
   "author": "Naitik Shah <n@daaku.org>",
@@ -16,6 +15,11 @@
     "url": "https://github.com/daaku/dak/issues",
     "email": "bugs@daklang.com"
   },
+  "keywords": [
+    "lisp",
+    "clojure",
+    "fennel"
+  ],
   "prettier": {
     "arrowParens": "avoid",
     "semi": false,
