add package.json with prepare step for loader

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@daklang",
   "workspaces": [
     "packages/transpiler",
-    "packages/cli"
+    "packages/cli",
+    "packages/loader"
   ]
 }
