rollup plugin, initial vite based website setup

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "workspaces": [
     "packages/transpiler",
     "packages/cli",
-    "packages/loader"
+    "packages/loader",
+    "packages/rollup",
+    "packages/website"
   ]
 }
