--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@daklang/transpiler": "^0.1.0"
+  },
   "devDependencies": {
     "vite": "^3.2.3"
   }
