--- a/packages/transpiler/package.json
+++ b/packages/transpiler/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "c8": "^7.12.0",
     "uvu": "^0.5.6"
+  },
+  "dependencies": {
+    "source-map-js": "^1.0.2"
   }
 }
