--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -12,7 +12,9 @@
     }
   },
   "scripts": {
-    "prepare": "mkdir -p dist && node ../cli/main.mjs < loader.dak > dist/loader.mjs"
+    "prepare": "mkdir -p dist && node ../cli/main.mjs < loader.dak > dist/loader.mjs",
+    "test": "uvu",
+    "cover": "c8 -r html -r text uvu"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,10 @@
     "esm",
     "loader"
   ],
+  "devDependencies": {
+    "c8": "^7.12.0",
+    "uvu": "^0.5.6"
+  },
   "dependencies": {
     "@daklang/transpiler": "^0.1.0"
   }
