--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "prepare": "mkdir -p dist && node ../cli/main.mjs < loader.dak > dist/loader.mjs",
+    "bundle": "esbuild --platform=node --bundle --format=esm --minify dist/loader.mjs",
     "test": "uvu",
     "cover": "c8 -r html -r text uvu"
   },
