cli: run dak scripts, html setup test/cover

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,7 @@
     "@daklang/transpiler": "^0.1.0"
   },
   "bin": {
-    "dak": "./main.mjs"
+    "dak": "./dak",
+    "dak-transpile": "./transpile.mjs"
   }
 }
