--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,7 +16,8 @@
     "email": "bugs@daklang.com"
   },
   "scripts": {
-    "build": "NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' node build.dak"
+    "dev": "NODE_ENV=development NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' node build.dak",
+    "build": "NODE_ENV=production NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' node build.dak"
   },
   "dependencies": {
     "@daklang/transpiler": "^0.1.0"
