website: make a dev server thing

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "chokidar": "^3.5.3",
-    "esbuild": "^0.17.6"
+    "esbuild": "^0.17.6",
+    "finalhandler": "^1.2.0",
+    "serve-static": "^1.15.0"
   }
 }
