--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,14 +16,15 @@
     "email": "bugs@daklang.com"
   },
   "scripts": {
-    "dev": "NODE_ENV=development NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' node build.dak",
-    "build": "NODE_ENV=production NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' node build.dak",
-    "watch": "NODE_ENV=development NODE_OPTIONS='--no-warnings --enable-source-maps --loader @daklang/loader' watchexec -cr -- node build.dak"
+    "dev": "dak build.dak",
+    "build": "NODE_ENV=production dak build.dak",
+    "watch": "watchexec -cr -- dak build.dak"
   },
   "dependencies": {
     "@daklang/transpiler": "^0.1.0"
   },
   "devDependencies": {
+    "@daklang/cli": "0.1.0",
     "esbuild": "^0.17.6",
     "finalhandler": "^1.2.0",
     "serve-static": "^1.15.0",
