website: test tour output

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,16 +18,20 @@
   "scripts": {
     "dev": "dak build.dak",
     "build": "NODE_ENV=production dak build.dak",
-    "watch": "watchexec -cr -- dak build.dak"
+    "watch": "watchexec -cr -- dak build.dak",
+    "test": "dak tests/tour.dak",
+    "cover": "c8 -e .dak -r html -r text dak tests/tour.dak"
   },
   "dependencies": {
     "@daklang/transpiler": "^0.1.0"
   },
   "devDependencies": {
     "@daklang/cli": "0.1.0",
+    "@daklang/transpiler": "0.1.0",
     "esbuild": "^0.17.6",
     "finalhandler": "^1.2.0",
     "serve-static": "^1.15.0",
+    "uvu": "^0.5.6",
     "ws": "^8.12.0"
   }
 }
