--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,19 @@
 name: Build
-on: push
+on: [push, pull_request]
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    name: node v${{ matrix.node-version }} / ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [18, 19]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
           cache: npm
           cache-dependency-path: '**/package.json'
       - run: npm install
