ci: add missing run arg

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           cache: npm
           cache-dependency-path: '**/package.json'
       - run: npm install
-      - run: npm -w packages/website build
+      - run: npm run -w packages/website build
       - uses: cloudflare/pages-action@1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
