ci: deploy needs explicit secrets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,6 @@ jobs:
           sudo dpkg -i rclone-current-linux-amd64.deb
       - name: deploy
         run: rclone --config packages/website/.rclone.conf copyto packages/website/dist/ s3:daklang.com/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
