--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,6 @@ jobs:
           git config --global user.name 'Naitik Shah'
           git config --global user.email 'daaku@users.noreply.github.com'
           ./node_modules/.bin/dak make.dak release ${{ github.event.inputs.version }}
-          echo Finished
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+      - uses: mxschmitt/action-tmate@v3
