--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: '19'
           registry-url: 'https://registry.npmjs.org'
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: npm install
       - name: Publish
         run: |
