cli: npx compatibility
This should allow `npx @daklang/cli hello.dak` to work, though it's
quite hacky. Using `npx` is mosty for demo purposes anyway since it adds
a good chunk of over head to the execution.

closes #90

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
     "@daklang/transpiler": "^0.4.0"
   },
   "bin": {
+    "cli": "./dak",
     "dak": "./dak",
     "dak-transpile": "./transpile.mjs"
   }
