bootstrap: introduce self contained boostrap to support self-hosted

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/loader",
     "packages/rollup",
     "packages/html",
+    "packages/bootstrap",
     "packages/website"
   ],
   "devDependencies": {
