--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
           cache-dependency-path: '**/package.json'
-      - run: npm install
+      - run: npm install -w packages/transpiler
+      - run: npm install --foreground-scripts
       - name: Run Tests
         run: ./node_modules/.bin/dak make.dak cover
 
@@ -32,7 +33,8 @@ jobs:
           node-version: 19
           cache: npm
           cache-dependency-path: '**/package.json'
-      - run: npm install
+      - run: npm install -w packages/transpiler
+      - run: npm install --foreground-scripts
       - run: npm run -w packages/website build
       - name: install rclone
         run: |
