--- a/packages/transpiler/package.json
+++ b/packages/transpiler/package.json
@@ -26,7 +26,7 @@
     "fennel"
   ],
   "scripts": {
-    "prepare": "mkdir -p dist && cp src/transpiler.mjs dist/transpiler.mjs && node ../bootstrap/bootstrap.mjs < src/transpiler.dak >> dist/transpiler.mjs",
+    "prepare": "mkdir -p dist && node ../bootstrap/bootstrap.mjs < src/transpiler.dak > dist/transpiler.mjs",
     "test": "uvu",
     "cover": "c8 -r html -r text uvu"
   },
