--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm install -w packages/transpiler
       - run: npm install --foreground-scripts
       - name: Run Tests
-        run: ./node_modules/.bin/dak make.dak cover
+        run: ./make.dak cover
 
   deploy:
     name: website
