transpiler: fix cover command to use new tests

--- a/packages/transpiler/package.json
+++ b/packages/transpiler/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "prepare": "mkdir -p dist && node ../bootstrap/bootstrap.mjs < src/transpiler.dak > dist/transpiler.mjs",
     "test": "dak tests/transpiler.dak",
-    "cover": "c8 -r html -r text uvu"
+    "cover": "c8 -e .dak -r html -r text dak tests/transpiler.dak"
   },
   "dependencies": {
     "source-map-js": "^1.0.2"
