--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   ],
   "devDependencies": {
     "c8": "^7.13.0",
+    "chokidar": "^3.5.3",
     "esbuild": "^0.17.6",
     "mri": "^1.2.0",
+    "picomatch": "^2.3.1",
     "semver": "^7.3.8",
     "uvu": "^0.5.6"
   }
