--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^3.5.3",
     "esbuild": "^0.17.6",
     "mri": "^1.2.0",
+    "p-debounce": "^4.0.0",
     "picomatch": "^2.3.1",
     "semver": "^7.3.8",
     "uvu": "^0.5.6"
