--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: npm install
+      - run: npm install -w packages/transpiler
+      - run: npm install --foreground-scripts
       - name: Publish
         run: |
           git config --global user.name 'Naitik Shah'
