@daklang/esbuild package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/cli",
     "packages/loader",
     "packages/rollup",
+    "packages/esbuild",
     "packages/html",
     "packages/bootstrap",
     "packages/build",
