website: better backoff strategy for reloads

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@daklang/esbuild": "^0.1.2",
-    "@daklang/html": "^0.3.0"
+    "@daklang/html": "^0.3.0",
+    "backo": "^1.1.0"
   },
   "devDependencies": {
     "finalhandler": "^1.2.0",
