--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /package-lock.json
 /packages/*/coverage
 /packages/*/dist
+/packages/build/node_modules
 /packages/vscode/*.vsix
 /packages/website/external
