--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "backo": "^1.1.0",
     "finalhandler": "^1.2.0",
     "marked": "^12.0.2",
     "marked-base-url": "^1.1.3",
     "marked-gfm-heading-id": "^3.1.3",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "source-map-js": "^1.2.0"
   }
 }
