--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
+      - run: bun run ./src/transpiler.dak
+      - run: git status --porcelain
       - run: bun test $(ls ./test/*.dak)
 
   deploy:
