--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bun run ./src/transpiler.dak
+      - run: ./src/transpiler.dak
       - run: git status --porcelain
       - run: bun test $(ls ./test/*.dak)
 
