CI: add missing bun install step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
+      - run: bun install
       - run: ./src/website.dak
-      - uses: mxschmitt/action-tmate@v3
       - name: install rclone
         run: |
           cd /tmp
