--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: latest
-      - run: node install
+      - run: npm install
       # - run: ./src/transpiler.dak
       - run: git status --porcelain
       - run: node --import=./src/bootstrap.mjs --enable-source-maps --test ./test/*.dak
