--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@daaku/livereload": "^0.5.0",
+    "esbuild": "^0.27.2",
     "marked": "^12.0.2",
     "marked-base-url": "^1.1.3",
     "marked-gfm-heading-id": "^3.1.3",
