--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: oven-sh/setup-bun@v2
       - run: bun install
-      - run: ./src/website.dak
+      - run: node --import=./src/bootstrap.mjs --enable-source-maps ./src/website.dak
       - name: install rclone
         run: |
           cd /tmp
