--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "marked": "^12.0.2",
     "marked-base-url": "^1.1.3",
     "marked-gfm-heading-id": "^3.1.3",
-    "source-map-js": "^1.2.0"
+    "prettier": "^3.7.4",
+    "source-map-js": "^1.2.0",
+    "terser": "^5.44.1"
   }
 }
